--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,12 @@ version = VERSION
 
 sourceCompatibility = 1.8
 
+jar {
+	manifest {
+		attributes 'Main-Class': 'net.earthcomputer.minefunk.Main'
+	}
+}
+
 // JAVACC
 sourceSets {
 	main {
